Make sure that we added order and search
