# api/swagger/swagger.yaml
@@ -163,7 +163,7 @@ paths:
         format: "int64"
       responses:
         200:
-          description: "All transaction Details"
+          description: "Successfully reserved an item"
           schema:
             items:
               $ref: '#/definitions/wallet_transactions'
@@ -189,9 +189,57 @@ paths:
             items:
               $ref: '#/definitions/order_response'
       x-swagger-router-controller: "PostOrderReservation"
+  
+  /search/{keyword}:
+    get:
+      description: "Get the all points transaction of the user"
+      tags:
+        - api
+      operationId: "GetSearchKeyword"
+      parameters:
+      - in: path
+        name: "keyword"
+        description: "Keyword to be search"
+        type: string
+        required: true
+        default: "bag"
+      - in: "query"
+        name: "deviceOrigin"
+        description: "deviceOrigin"
+        type: string
+        default: "PWA"
+      - in: "query"
+        name: "offset"
+        description: "Offset"
+        type: integer
+        format: "int64"
+      - in: "query"
+        name: "limit"
+        description: "Offset"
+        type: integer
+        format: "int64"
+      responses:
+        200:
+          description: "Items with keyword"
+          schema:
+            items:
+              $ref: '#/definitions/search_items'
+      x-swagger-router-controller: "GetSearchKeyword"
       
   
 definitions:
+  search_items:
+    type: object
+    properties:
+      totalCount:
+        type: integer
+        description: "Total number of item, required for pagination"
+        default: 1
+      productList:
+        type: array
+        items:
+          $ref: '#/definitions/product'
+    
   order_response:
     type: object
     properties:
